@@ -893,6 +893,30 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
+name|createCheckpoint
+argument_list|(
+operator|new
+name|Date
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|SuppressWarnings
+argument_list|(
+literal|"deprecation"
+argument_list|)
+DECL|method|createCheckpoint (Date date)
+specifier|public
+name|void
+name|createCheckpoint
+parameter_list|(
+name|Date
+name|date
+parameter_list|)
+throws|throws
+name|IOException
+block|{
 if|if
 condition|(
 operator|!
@@ -924,9 +948,7 @@ name|CHECKPOINT
 operator|.
 name|format
 argument_list|(
-operator|new
-name|Date
-argument_list|()
+name|date
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -1506,7 +1528,13 @@ expr_stmt|;
 name|trash
 operator|.
 name|createCheckpoint
-argument_list|()
+argument_list|(
+operator|new
+name|Date
+argument_list|(
+name|now
+argument_list|)
+argument_list|)
 expr_stmt|;
 block|}
 catch|catch
